changed nav color

--- a/styles.css
+++ b/styles.css
@@ -480,7 +480,7 @@ button.cta {
 }
 .nav-container{
     display: flex;
-    background-color: #76badb;
+    background-color: #1ba3e7;
         padding: 2% 0;
 }
 .container-five p {
